# backend-sdk

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  FIX-PROPOSALS.md  ISSUE-A-VERDICT.md  LICENSE.txt  MEDIUM-ISSUES-ANALYSIS.md  Makefile  README.md  README.rst  REVIEW-FINDINGS.md  REVIEW-FIXES.md  dev-requirements-3.10.txt  dev-requirements-3.11.txt  dev-requirements-3.12.txt  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt  setup.cfg  setup.py  spec.md  tpcds_semantic_model.yaml
.github/workflows/: python-package-daily.yml  python-package.yml
docs/: conf.py  index.rst
examples/exports/: metadata.yaml
examples/exports/charts/: Total_count_134.yaml
examples/exports/dashboards/: White_label_test.yaml
examples/exports/databases/: Google_Sheets.yaml
examples/exports/datasets/Google_Sheets/: country_cnt.yaml
examples/exports/functions/: demo.py
src/preset_cli/: __init__.py  constants.py  exceptions.py  lib.py  typing.py
src/preset_cli/api/: client.py  operators.py
src/preset_cli/api/clients/: dbt.py  preset.py  superset.py
src/preset_cli/auth/: jwt.py  lib.py  main.py  password.py  preset.py  superset.py  token.py
src/preset_cli/cli/: export_users.py  main.py
src/preset_cli/cli/superset/: asset_utils.py  delete.py  delete_cascade.py  delete_display.py  delete_rollback.py  delete_types.py  dependency_utils.py  export.py  export_helpers.py  import_.py  lib.py  main.py  sql.py
src/preset_cli/cli/superset/sync/: main.py
src/preset_cli/cli/superset/sync/dbt/: command.py  dashboards.py  databases.py  datasets.py  exposures.py  lib.py  metrics.py  schemas.py
src/preset_cli/cli/superset/sync/dj/: command.py  lib.py
src/preset_cli/cli/superset/sync/native/: command.py  no_cascade.py  types.py
src/preset_cli/cli/superset/sync/osi/: __init__.py  command.py  lib.py
tests/: conftest.py  lib_test.py
tests/api/: client_test.py
tests/api/clients/: dbt_test.py  preset_test.py  superset_test.py
tests/auth/: jwt_test.py  lib_test.py  main_test.py  password_test.py  preset_test.py  superset_test.py
tests/cli/: export_users_test.py  main_test.py
tests/cli/superset/: asset_utils_test.py  delete_test.py  export_test.py  import_test.py  lib_test.py  main_test.py  sql_test.py
tests/cli/superset/sync/dbt/: command_test.py  dashboards_test.py  databases_test.py  datasets_test.py  exposures_test.py  lib_test.py  manifest-metricflow.json  manifest.json  metrics_test.py
tests/cli/superset/sync/dj/: command_test.py  lib_test.py
tests/cli/superset/sync/native/: command_test.py
tests/cli/superset/sync/osi/: __init__.py  command_test.py
