# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = preset-cli
description = A CLI to interact with Preset (https://preset.io/) workspaces.
author = Beto Dealmeida
author_email = beto@preset.io
license = Other/Proprietary License
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/preset-io/backend-sdk
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/preset-io/backend-sdk/blob/master/README.rst
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: Other/Proprietary License


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    Cython>=0.29.26
    PyYAML>=6.0
    appdirs>=1.4.4
    backoff>=1.10.0
    beautifulsoup4>=4.10.0
    click>=8.0.3
    jinja2>=3.0.3
    marshmallow>=3.17.0
    numpy>=1.21.5
    pandas>=1.3.5
    prison>=0.2.1
    prompt-toolkit>=3.0.24
    pygments>=2.11.2
    python-graphql-client>=0.4.3
    requests>=2.26.0
    rich>=12.3.0
    sqlalchemy>=1.4,<2
    sqlglot>=19,<23
    tabulate>=0.8.9
    typing-extensions>=4.0.1
    yarl>=1.7.2
    greenlet>=1.1.3  # required for Python 3.11
    aiohttp>=3.8.3

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# TODO: Implement additional optional dependencies
snowflake = snowflake-sqlalchemy==1.4.4

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    freezegun
    pytest
    pytest-cov
    pytest-mock
    pyfakefs
    requests-mock
    codespell
    pre-commit
    pip-tools>=6.6.0
    pylint==2.15.5

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = preset_cli.module:function
# For example:
# console_scripts =
#     fibonacci = preset_cli.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
console_scripts =
    preset-cli = preset_cli.cli.main:preset_cli
    superset-cli = preset_cli.cli.superset.main:superset_cli

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov preset_cli --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.4
package = preset_cli
